[package]
name = "app_route"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
app_route_derive = { path = "../app_route_derive" }
lazy_static = "1.3.0"
regex = "1.1.6"
serde_qs = "0.4.5"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
