[package]
name = "app_route_derive"
description = "A procedural macro to allow automatic deserialization of URL path + query parameters into Rust structs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bschwind/app-route"
version = "0.3.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
proc-macro2 = "0.4.28"
quote = "0.6.12"
regex = "1.1.6"
